fix nodeIdGeneration